ext_ingress_nodeport_https/deploy_nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: praqma/network-multitool
        ports:
        - containerPort: 80
        - containerPort: 443
