ext_ingress_nodeport_https/service_nginx_b.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
  name: nginx-nodeport-b
  labels:
    app: nginx
    type: nodeport
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: nginx
  type: NodePort
