ext_ingress_nodeport_https/a.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: gke-global-lb-ext-ip
  name: ext-service-ingress
  namespace: ck-service
spec:
  tls:
  - hosts:
      - theknow-gke.dev.corp.creditkarma.com
    secretName: theknow-gke-self-singed-dont-use
  backend:
    serviceName: nginx-nodeport
    servicePort: 80
